
	* tests/tmcdd.R: new tests, for covMcd() with nsamp="deterministic"

	* tests/tmcdd.Rout.save: new tests, for covMcd() with nsamp="deterministic"

	* inst/xtraR/test_MCD.R: modified to test covMcd() with nsamp="deterministic"

	* NAMESPACE: export the functions r6pack() and doScale() to
	  be used in rrcov for the deterministic S- and MM-estimates

2014-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjoutlyingness.R (adjOutlyingness): reverse the defaults of
	'clower' and 'cupper' and fix +/- swap; see new note in man/adjOutlyingness.Rd
	* man/adjOutlyingness.Rd: the wrong defaults came from *.ssc file from Antwerpen

2014-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rllarsbi.f (rlLARSbi): got rid of warnings -- and many GOTOs

2014-06-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-0
	* R/nlrob.R (.nls.get.start, nlrob): now works with indexed vector parameters
	  -- FIXME: at ETH have testing code + example data -- unfinished!-- -- on nb-mm3 not

2014-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.91-1, released to CRAN

2014-04-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.91-0, released to CRAN

2014-01-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.90-1, released to CRAN on 2014-01-30

2013-05-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (Mpsi, Mchi, Mwgt): now all work via .Call():
	is  9 x  faster for n ~ 4000, and a few NAs.

2013-05-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (MrhoInf): new, providing rho(Inf), i.e.,
	the scaling constant (rho |--> rho~ = chi)
	* R/lmrob.MM.R (Mpsi, Mchi, Mwgt): renamed, exported and documented,
	from former hidden lmrob.psifun(), lmrob.chifun(), lmrob.wgtfun().
	* TODO: now has an extensive section on psi/rho/chi etc

2013-03-27  Martin Maechler  <maechler@stat.math.ethz.ch>
