@@ -15,6 +15,8 @@
 
 	* NAMESPACE: export the functions r6pack() and doScale() to
 	  be used in rrcov for the deterministic S- and MM-estimates
+    
+    * src/rffastmcd and init.c, R/covMcd: fix a bug in nsamp="exact"
 
 2014-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
